--- a/C/Startmenu.html
+++ b/C/Startmenu.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./OS.css">
 </head>
-<body>
+<body class="Startmenu">
 
     <div class="loading-bar">
 
     </div>
 </body>
+    <script src="/C/bootScreen.js"></script>
 </html>
