A lot of new things
Working on the visual aspects of the desktop

--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Styles/OS.css">
 </head>
-<body>
-    Desktop 0.01
+<body class="Desktop">
+    Desktop 0.02
 </body>
+<footer class="Taskbar">
+    <button id="StartButton" class="StartButton"><p>Start</p></button>
+    <div class="Apps"></div>
+    <div class=""></div>
+</footer>
 </html>
