--- a/C/Startmenu.html
+++ b/C/Startmenu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./OS.css">
+    <link rel="stylesheet" href="./Styles/OS.css">
 </head>
 <body class="Startmenu">
 
