--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="./Styles/OS.css">
 </head>
 <body class="Desktop">
-    Desktop 0.02
+    Desktop 0.03
 </body>
 <footer class="Taskbar">
-    <button id="StartButton" class="StartButton"><p>Start</p></button>
-    <div class="Apps"></div>
-    <div class=""></div>
+    <div>
+        <button id="StartButton" class="StartButton"><img src="../C/Styles/icons/start9x.png"></img><p>Start</p></button>
+        <hr>
+    </div>
+    <div class="Apps">
+
+    </div>
+    <div>
+        <hr>
+        <div class="Widgets">
+            <button id="widget-sound"><img src="../C/Styles/icons/sound95tx.png"></button>
+            <p id="widget-time">00:00</p>
+        </div>
+    </div>
 </footer>
+
+    <script src="./Scripts/Time.js"></script>
+
 </html>
