--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="./Styles/OS.css">
 </head>
 <body class="Desktop">
-    Desktop 0.04
-    <img src="./Styles/images/Stupid/IJI5FDKR72RUZAKGPVKFGEBWPHO6JZC3.gif" style="width: 400px; position: fixed; left: 50%; top: 50%; z-index: 1000; transform: translate(-50%, -50%);">
-    <img src="./Styles/images/Stupid/website-under-construction-image-6.gif" style="width: 100px; position: fixed; left: 50%; top: 25%; z-index: 1000; transform: translate(-50%, -100%);">
+    Desktop 0.05
+
+    <div id="Overlay">
+        
+    </div>
+
+    <img src="./Styles/images/Stupid/IJI5FDKR72RUZAKGPVKFGEBWPHO6JZC3.gif" style="width: 400px; position: fixed; left: 50%; top: 50%; z-index: -10; transform: translate(-50%, -50%);">
+    <img src="./Styles/images/Stupid/website-under-construction-image-6.gif" style="width: 100px; position: fixed; left: 50%; top: 25%; z-index: -10; transform: translate(-50%, -100%);">
 </body>
 <footer class="Taskbar">
     <div>
