FINALLY WORKING DRAGGABLE WINDOW

--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -36,7 +36,7 @@
     <div id="Process">
         <script src="./Scripts/Time.js"></script>
         <script src="./Scripts/Wellcome.js"></script>
-        
+        <script src="./Scripts/WindowExe.js"></script>
     </div>
 
 
