--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -21,7 +21,7 @@
         <button id="StartButton" class="StartButton"><img src="../C/Styles/icons/start9x.png"></img><p>Start</p></button>
         <hr>
     </div>
-    <div class="Apps">
+    <div class="Apps" id="Apps">
 
     </div>
     <div>
