--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desktop 0.06</title>
     <link rel="stylesheet" href="./Styles/OS.css">
+    <link rel="shortcut icon" href="./Styles/icons/start9x.png" type="image/x-icon">
 </head>
 <body class="Desktop">
-    Desktop 0.05
 
     <div id="Overlay">
 
