--- a/C/Startmenu.html
+++ b/C/Startmenu.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loading...</title>
     <link rel="stylesheet" href="./Styles/OS.css">
+    <link rel="shortcut icon" href="./Styles/icons/start9x.png" type="image/x-icon">
 </head>
 <body class="Startmenu">
 
