--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -37,6 +37,7 @@
         <script src="./Scripts/Time.js"></script>
         <script src="./Scripts/Wellcome.js"></script>
         <script src="./Scripts/WindowExe.js"></script>
+        <script src="./Scripts/ErrorsExe.js"></script>
     </div>
 
 
