A lot of things..

--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -38,6 +38,8 @@
         <script src="./Scripts/ErrorsExe.js"></script>
         <script src="./Scripts/WindowExe.js"></script>
         <script src="./Scripts/Wellcome.js"></script>
+        <script src="./Scripts/rightclick.js"></script>
+        <script src="./Scripts/mainmenu.js"></script>
     </div>
 
 
