--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -37,9 +37,11 @@
         <script src="./Scripts/Time.js"></script>
         <script src="./Scripts/ErrorsExe.js"></script>
         <script src="./Scripts/WindowExe.js"></script>
-        <script src="./Scripts/Wellcome.js"></script>
+        <script src="./Scripts/contextmenuExe.js"></script>
         <script src="./Scripts/rightclick.js"></script>
         <script src="./Scripts/mainmenu.js"></script>
+
+        <script src="./Scripts/Wellcome.js"></script>
     </div>
 
 
