--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -18,7 +18,7 @@
 </body>
 <footer class="Taskbar">
     <div>
-        <button id="StartButton" class="StartButton"><img src="../C/Styles/icons/start9x.png"></img><p>Start</p></button>
+        <button id="StartButton" class="StartButton" onclick="mainmenuExe()"><img src="../C/Styles/icons/start9x.png"></img><p>Start</p></button>
         <hr>
     </div>
     <div class="Apps" id="Apps">
