--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Styles/OS.css">
     <link rel="shortcut icon" href="./Styles/icons/start9x.png" type="image/x-icon">
 </head>
-<body class="Desktop">
+<body class="Desktop" id="Desktop">
 
     <div id="Overlay">
 
