WORKING MAIN MENU AND CONTEXT MENU!

--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -39,8 +39,10 @@
         <script src="./Scripts/WindowExe.js"></script>
         <script src="./Scripts/contextmenuExe.js"></script>
         <script src="./Scripts/rightclick.js"></script>
+        <script src="./Scripts/winmenu.js"></script>
         <script src="./Scripts/mainmenu.js"></script>
 
+        
         <script src="./Scripts/Wellcome.js"></script>
     </div>
 
