--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -41,6 +41,7 @@
         <script src="./Scripts/rightclick.js"></script>
         <script src="./Scripts/winmenu.js"></script>
         <script src="./Scripts/mainmenu.js"></script>
+        <script src="./Scripts/winmenu2.js"></script>
 
         
         <script src="./Scripts/Wellcome.js"></script>
