--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -34,6 +34,8 @@
 </footer>
 
     <div id="Process">
+        <script src="./Scripts/WindowManager.js"></script>
+
         <script src="./Scripts/Time.js"></script>
         <script src="./Scripts/ErrorsExe.js"></script>
         <script src="./Scripts/WindowExe.js"></script>
