Finally working things

--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desktop 0.06</title>
+    <title>Desktop 0.07</title>
     <link rel="stylesheet" href="./Styles/OS.css">
     <link rel="shortcut icon" href="./Styles/icons/start9x.png" type="image/x-icon">
 </head>
@@ -47,6 +47,7 @@
 
         
         <script src="./Scripts/Wellcome.js"></script>
+        <script src="./Scripts/Softwares/ReadMeExe.js"></script>
     </div>
 
 
