--- a/C/Desktop.html
+++ b/C/Desktop.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop 0.07</title>
     <link rel="stylesheet" href="./Styles/OS.css">
+    <link rel="stylesheet" href="./Styles/Softwares.css">
     <link rel="shortcut icon" href="./Styles/icons/start9x.png" type="image/x-icon">
 </head>
 <body class="Desktop" id="Desktop">
@@ -48,6 +49,7 @@
         
         <script src="./Scripts/Wellcome.js"></script>
         <script src="./Scripts/Softwares/ReadMeExe.js"></script>
+        <script src="./Scripts/Softwares/cmdexe.js"></script>
     </div>
 
 
