--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <p> PIOS </p>
         <p> versión 0.03 </p>
     </div>
-    <select multiple>
-        <option value="1">Windows 95</option>
-        <option value="1">Windows 98</option>
+    <select id="select" multiple>
+        <option value="1" id="1">Windows 95</option>
+        <option value="2">Windows 98</option>
     </select>
 </body>
 <footer>
